2010-05-23  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: fsvn-log-sibling path is broken. Destructive `sort'.

	* Change: fsvn-browse-mode
	    show current directory status.

2010-05-19  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: fsvn-make.el
	       Unable compile emacs current version.

2010-05-15  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Refactor: fsvn-find-logs-entry -> fsvn-logs-find-logentry
	* Refactor: fsvn-log-create-path-chain -> fsvn-logs-create-path-chain
	* Refactor: fsvn-log-chain-find -> fsvn-logs-chain-find
	* Refactor: fsvn-popup.el functions to fsvn-popup namespace.
	* Change: revoke fsvn-svk from fsvn.el.
	       That depends on user's choice.

	* Improvement: Make distributable only a fsvn.el

2010-05-11  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: fsvn-browse-commit-path
	    subcommand args missing.

2010-05-10  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: fsvn-log-sibling-save-this
	       Unable save revisioned url.

	* Refactor: fsvn-log-list-save -> fsvn-log-list-save-this

	* Improvement: fsvn-log-sibling-mode sort all by path name.

	* Change: fsvn-browse-log-path -> fsvn-browse-logview-path

2010-05-09  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Improvement: svk support

2010-05-08  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Refactor: fsvn-browse-mode function name drastic change.
	* Refactor: fsvn-magic-current-file -> fsvn-magic-point-file
	* Refactor: fsvn-browse-log-this -> fsvn-browse-logview-this
	* ADD: fsvn-browse-guessed-moved-parent-threshold
	* FIX: fsvn-browse-info-selected, fsvn-browse-info-path
	       Unable execute in repository.

2010-05-05  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* ADD: `lock' with message (by universal-argument)

	* CHANGE: fsvn-message-edit-before-commit-hook -> fsvn-minor-commit-before-commit-hook

	* CHANGE: fsvn-message-edit-after-commit-hook -> fsvn-minor-commit-after-commit-hook
